--- a/src/Components/Task4/MenuInfoBlock/MenuInfoBlock.css
+++ b/src/Components/Task4/MenuInfoBlock/MenuInfoBlock.css
@@ -1,4 +1,33 @@
 .menu_info {
    width: 50%;
    border: 1px solid black;
+   background-color: #3870de;
+   border-radius: 50px;
+   opacity: 0;
+   transition: 1s;
+   animation: show 3s 1;
+   animation-fill-mode: forwards;
+   animation-delay: 1s;
+}
+
+.menu__title {
+   color: #fff;
+   font-size: 30px;
+   padding-left: 20px;
+}
+
+.menu__content {
+   color: #fff;
+   font-size: 18px;
+   padding: 0 10px 0 20px;
+   letter-spacing: 1px;
+}
+
+@keyframes show {
+   0% {
+      opacity: 0;
+   }
+   100% {
+      opacity: 1;
+   }
 }
