--- a/src/Components/Task4/Menu/Menu.css
+++ b/src/Components/Task4/Menu/Menu.css
@@ -15,7 +15,7 @@
    width: 30%;
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
+   justify-content: space-around;
    margin: 0;
    padding: 0;
    list-style: none;
