--- a/src/Components/Task4/MenuItem/MenuItem.css
+++ b/src/Components/Task4/MenuItem/MenuItem.css
@@ -1,14 +1,15 @@
 .menu__item {
    width: 70%;
-   height: 70px;
+   height: 50px;
    border: 1px solid black;
-   background-color: #3cb371;
+   background-color: #3870de;
    margin-left: 50px;
+   border-radius: 50px;
 }
 
-.menu__item a {
+.menu__item span {
    font-size: 17px;
-   color: #483d8b;
+   color: #fff;
    margin: 0 auto;
    padding: 0;
    text-align: center;
@@ -18,7 +19,7 @@
    font-weight: bold;
 }
 
-.menu__item a:hover {
-   color: white;
+.menu__item:hover {
+   background-color: black;
    cursor: pointer;
 }
